--- a/components/admin/category/category.module.css
+++ b/components/admin/category/category.module.css
@@ -1,5 +1,5 @@
 .category{
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
 .category .addprdt{
     position: fixed;
@@ -38,8 +38,8 @@
     display: flex;
     justify-content: space-between;
     align-content: center;
-    padding: 5px 0;
-    border-bottom: 1px solid rgb(186, 186, 186);
+    padding: 8px 0;
+    border-bottom: 1px solid rgb(219, 219, 219);
 }
 .category .categoryHead p{
     font-size: 20px;
@@ -47,28 +47,31 @@
     letter-spacing: 1px;
     margin-bottom: 5px;
     text-transform: uppercase;
+    color: rgb(68, 68, 68);
 }
 .category .categoryHead button{
-    background-color: black;
+    background-color: #1156eb;
     color: white;
-    left: 1px;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 500;
-    padding: 6px 15px;
+    padding: 8px;
+    border-radius: 5px;
     border: none;
     cursor: pointer;
+    letter-spacing: 1px;
 }
 .category .categoryBody{
     margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(6,1fr);
-    grid-gap: 10px;
+    grid-gap: 15px;
 }
 
 .category .categoryBody .categoryCard{
-    border: 1px solid black;
-    padding: 3px;
+    border: 1px solid rgb(192, 192, 192);
+    padding: 8px;
     cursor: pointer;
+    border-radius: 10px;
 }
 .category .categoryBody .categoryCard .categoryImages{
     display: flex;
@@ -82,11 +85,12 @@
     width: auto;
     max-width: 100%;
     margin-bottom: 5px;
+    border-radius: 8px;
 }
 .category .categoryBody .categoryCard p{
     font-size: 12px;
     letter-spacing: 1px;
-    color: black;
+    color: rgb(61, 61, 61);
     font-weight: 600;
     margin-bottom: 10px;
     text-align: center;
