--- a/src/app/voguemine-admin/admin.module.css
+++ b/src/app/voguemine-admin/admin.module.css
@@ -174,7 +174,6 @@ color: black;
     border: 1px solid rgb(18, 62, 255);
     border-radius: 10px;
     position: relative;
-    overflow: hidden;
 }
 .admin .adminBody .adminLeft .search input{
     width: 100%;
@@ -198,6 +197,7 @@ color: black;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 0 8px 8px 0;
 }
 .admin .adminBody .adminLeft .search .searchOptions{
     position: absolute;
