--- a/src/app/voguemine-admin/admin.module.css
+++ b/src/app/voguemine-admin/admin.module.css
@@ -20,8 +20,8 @@
     right: -4px;
     width: 17px;
     height: 17px;
-    background-color: rgb(255, 205, 205);
-    color: #eb1111;
+    background-color: red;
+    color: white;
     border-radius: 50%;
     font-weight: 500;
     display: flex;
